tests/baselines/reference/invalidUnicodeEscapeSequance2.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance2.ts (2 errors) ====
    var arg\uxxxx
           ~
!!! invalidUnicodeEscapeSequance2.ts(1,8): error TS1001: Unexpected character "\".
           ~
!!! invalidUnicodeEscapeSequance2.ts(1,8): error TS1005: ',' expected.